
2012-12-20  Murilo Pinoti Belluzzo (mbelluzzo)

	* Add elm_systray to set a Status Notifier Item in the System Tray (D-Bus).

2012-12-27  Jiyoun Park (jypark)

	* elm_photocam returns file_set error properly.

2012-12-28  Mike Blumenkrantz

        * Fix bug where genlist would delete items added during selection callback if a clear was queued

2012-12-27  Henrique Dante de Almeida (hdante)
	* Support item separators in D-Bus menu
	* Support freedesktop icons in D-Bus menu
	* Reduce D-Bus communication (omit default values)

2012-12-29  Mike Blumenkrantz

        * Tooltips now correctly set NETWM tooltip window type

2013-01-03  JaeHyun Jo (jae_hyun@cho@naver.com)

        * Fix the naviframe item part text to be set properly.

2013-01-03  Thiep Ha

        * Fix list separator size bug.

2013-01-03  Jaehwan Kim

        * Fix the bug which the callbacks of the sub-object are added even if the sub-object is added the parent object.

2012-01-03  Prince Dubey Kumar <prince.dubey@samsung.com>

        * Fix gengrid region_show/bring_in and add test

2012-01-04  ChunEon Park <hermet@hermet.pe.kr>

        * Deprecate elm_label_slide_set()/get() and added elm_label_slide_mode_set()/get() instead and elm_label_slide_go().

2012-01-05  ChunEon Park <hermet@hermet.pe.kr>

        * Added a label signal callback "slide,end"

2013-01-06  Jaehyun Cho <jae_hyun_cho@naver.com>

        * Fix omitting signal emission when customized text parts change the text.

2013-01-10  Cedric Bail

	* Don't link anymore with E_DBus at build time.

2013-01-13  Daniel Juyung Seo (SeoZ)

        * Added "highlighted" and "unhighlighted" signals to list, genlist, and gengrid.

2013-01-16  Shilpa Singh <shilpa.singh@samsung.com>, Rajeev Ranjan <rajeev.r@samsung.com>

        * Fix "changed" signal being sent twice in case of toggle style when check is clicked.

2013-01-16  WooHyun Jung

        * elm_plug should call elm_widget_can_focus_set after adding parent class.